<resources>

    <string name="app_name">IkamvaYouth</string>
    <string name="welcome_text">Welcome To IkamvaYouth</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Enter Password</string>
    <string name="logo_description">IkamvaYouth Logo</string>
    <string name="register">Register</string>
    <string name="email">Enter Email</string>
    <string name="registerText">Don\'t have a account? Register Here</string>
    <string name="subject">Have a account? Login Here</string>
    <string name="resources">Have a account? Login Here</string>
    <string name="MarkAndResults">Marks And Feedback</string>
    <string name="TestAndAssignments">Have a account? Login Here</string>
    <string name="loginText">Have a account? Login Here</string>


</resources>